-fix images clipping through the mobile menu FIXED FIXED*2 07/11/2022

--- a/style.css
+++ b/style.css
@@ -116,7 +116,6 @@ picture,
 svg {
   max-width: 100%;
   display: block;
-  z-index: -10;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@@ -361,12 +360,14 @@ section {
     background-color: var(--nav-color-bgr);
     border-radius: 10px;
     box-shadow: 0 0 0.75em rgba(0 0 0 0.05);
+    z-index: 10;
   }
   .primary-header[data-overlay]::before {
     content: "";
     position: fixed;
     inset: 0;
     background-image: var(--lineargradient);
+    z-index: 9;
   }
   .nav-list {
     padding: 30px;
@@ -497,7 +498,6 @@ img {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
-  z-index: -9;
 }
 /* Position the "next button" to the right */
 .next {
@@ -519,7 +519,6 @@ img {
   bottom: 8px;
   width: 100%;
   text-align: center;
-  z-index: -9;
 }
 /* Number text (1/3 etc) */
 .numbertext {
@@ -528,7 +527,6 @@ img {
   padding: 8px 12px;
   position: absolute;
   top: 0;
-  z-index: -9;
 }
 /* The dots/bullets/indicators */
 .dot {
@@ -540,7 +538,6 @@ img {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-  z-index: -9;
 }
 .active,
 .dot:hover {
